<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutMe">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:id="@+id/imageView"
                />

        <TextView
                android:text="@string/about_me_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textColor="@color/dehydratedGreen"
                android:textSize="24sp"/>

        <TextView
                android:text="@string/about_me_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                />

        <Button
                android:text="@string/about_me_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/aboutMeButton"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>