<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/mass_description_kg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/massDescription"
            android:layout_marginTop="@dimen/main_margin_top"
            app:layout_constraintTop_toTopOf="@+id/photoGuideline"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/main_margin_start_end"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/main_margin_start_end"
            app:layout_constraintHorizontal_bias="0.0"/>

    <EditText
            android:layout_width="match_parent"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/massInput"
            app:layout_constraintTop_toBottomOf="@+id/massDescription"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/main_margin_start_end"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/main_margin_start_end"
            android:layout_height="wrap_content"
            android:hint="@string/mass_fill_in_hint"
            android:visibility="visible"
            android:importantForAutofill="no"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/heightDescription"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/main_margin_start_end"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/main_margin_start_end"
            app:layout_constraintHorizontal_bias="0.0"
            android:text="@string/height_description_cm"
            android:layout_marginTop="@dimen/main_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/massInput"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/heightInput"
            app:layout_constraintTop_toBottomOf="@+id/heightDescription"
            android:layout_marginStart="@dimen/main_margin_start_end"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/main_margin_start_end"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/height_fill_in_hint"
            android:importantForAutofill="no"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/photoGuideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4"/>

    <ImageView
            android:layout_width="0dp"
            tools:srcCompat="@drawable/healthy_obrazek"
            android:id="@+id/mainPhoto"
            app:layout_constraintBottom_toTopOf="@+id/photoGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/main_margin_start_end"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/main_margin_start_end"
            android:layout_marginTop="@dimen/main_margin_top"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/healthy_obrazek"
            android:contentDescription="@string/main_activity_photo_description"
            android:layout_height="0dp"/>

    <Button
            android:text="@string/count_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/countBmiButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/main_margin_start_end"
            android:layout_marginBottom="@dimen/main_margin_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/main_margin_start_end"/>

    <TextView
            android:text="@string/your_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yourBmi"
            android:layout_marginBottom="@dimen/main_margin_bottom"
            app:layout_constraintBottom_toTopOf="@+id/bmiResult"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/main_margin_start_end"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/main_margin_start_end"
            android:textSize="@dimen/app_small_text_size"
            />

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bmiResult"
            app:layout_constraintBottom_toTopOf="@+id/bmiCategory"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/main_margin_start_end"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/main_margin_start_end"
            android:textSize="@dimen/app_big_text_size"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.0"
            android:visibility="visible"
            android:layout_marginBottom="@dimen/main_margin_bottom"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bmiCategory"
            android:layout_marginBottom="@dimen/main_margin_bottom"
            app:layout_constraintBottom_toTopOf="@+id/countBmiButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/main_margin_start_end"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/main_margin_start_end"
            android:visibility="visible"
            android:textSize="@dimen/app_medium_text_size"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_dialog_info"
            android:id="@+id/bmiInfoButton"
            android:layout_marginBottom="@dimen/main_margin_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/main_margin_start_end"
            style="@android:style/Widget.DeviceDefault.ImageButton"
            android:tint="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:visibility="invisible"
            android:contentDescription="@string/main_button_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>